preparando el decoder

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -761,29 +761,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d72e144c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([1.])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p.json already exists. Skipping dummy file creation.\n"
+     ]
     }
    ],
    "source": [
-    "a = 3"
+    "# Creación  de un archivo JSON\n",
+    "\n",
+    "try:\n",
+    "    with open('p.json', 'x') as f:\n",
+    "        f.write(\"\"\"\n",
+    "{\n",
+    "\"mrws1_sx320\": {\n",
+    "\"wav\": \"/dbase/timit/test/dr5/mrws1/sx320.wav\",\n",
+    "\"duration\": 3.28325,\n",
+    "\"spk_id\": \"mrws1\",\n",
+    "\"phn\": \"sil dh ih n ih r ih s ih n ih sil g aa sil m ey n aa sil b iy w ih th ih n w aa sil k ih ng sil d ih s sil t ih n sil s sil\",\n",
+    "\"wrd\": \"the nearest synagogue may not be within walking distance\",\n",
+    "\"ground_truth_phn_ends\": \"2360 2840 3216 4511 5556 7018 7880 10440 11160 12040 13160 13960 14200 17640 18280 19160 20360 21560 23800 25320 25720 26520 27800 28825 30440 31248 32208 34130 35880 36760 37640 37960 39101 40120 40360 41640 43000 43320 44200 44440 45280 46680 49560 52480\"\n",
+    "},\n",
+    "} \"\"\")\n",
+    "except FileExistsError:\n",
+    "    print(\"p.json already exists. Skipping dummy file creation.\")\n",
+    "        \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -797,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
