--- a/timit/gemini1.ipynb
+++ b/timit/gemini1.ipynb
@@ -540,6 +540,160 @@
     "print(f\"Decoded tokens: {decoded_tokens}\")\n",
     "print(f\"Decoded text: '{decoded_text}'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7130bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchtext.vocab import Vocab\n",
+    "import os # For creating a dummy file\n",
+    "\n",
+    "def load_vocab_from_phoneme_file(filepath: str) -> Vocab:\n",
+    "    \"\"\"\n",
+    "    Loads a torchtext.vocab.Vocab object from a file where each line\n",
+    "    contains a phoneme and its corresponding index, separated by a space.\n",
+    "    Assumes all necessary phonemes and indices are in the file,\n",
+    "    and no out-of-vocabulary handling is needed.\n",
+    "\n",
+    "    Args:\n",
+    "        filepath (str): The path to the vocabulary file.\n",
+    "\n",
+    "    Returns:\n",
+    "        torchtext.vocab.Vocab: The constructed Vocab object.\n",
+    "    \"\"\"\n",
+    "    phoneme_to_index_map = {}\n",
+    "    max_index = -1\n",
+    "\n",
+    "    with open(filepath, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            parts = line.strip().split(' ')\n",
+    "            if len(parts) == 2:\n",
+    "                phoneme, index_str = parts[0], parts[1]\n",
+    "                try:\n",
+    "                    index = int(index_str)\n",
+    "                    phoneme_to_index_map[phoneme] = index\n",
+    "                    if index > max_index:\n",
+    "                        max_index = index\n",
+    "                except ValueError:\n",
+    "                    print(f\"Error: Could not parse index from line: '{line.strip()}'\")\n",
+    "                    raise\n",
+    "            else:\n",
+    "                print(f\"Error: Malformed line (expected 'phoneme index'): '{line.strip()}'\")\n",
+    "                raise\n",
+    "\n",
+    "    # Create the index-to-phoneme list (itos_list) based on the loaded map\n",
+    "    # Initialize with None as placeholders for potentially missing indices (though your data is contiguous)\n",
+    "    itos_list = [None] * (max_index + 1)\n",
+    "    for phoneme, index in phoneme_to_index_map.items():\n",
+    "        itos_list[index] = phoneme\n",
+    "    \n",
+    "    # Optional: Basic check to ensure no gaps or unassigned indices if strictness is required\n",
+    "    if any(item is None for item in itos_list):\n",
+    "        missing_indices = [i for i, item in enumerate(itos_list) if item is None]\n",
+    "        print(f\"Warning: itos_list has unassigned indices: {missing_indices}. This might indicate gaps in your input file's indices.\")\n",
+    "\n",
+    "\n",
+    "    # Create the Vocab object directly from the itos list\n",
+    "    vocab = Vocab(itos_list=itos_list)\n",
+    "    \n",
+    "    # No vocab.set_default_index() needed as per your requirement of no OOV.\n",
+    "    # If a phoneme not in the loaded vocab is queried, it will raise a KeyError.\n",
+    "\n",
+    "    return vocab\n",
+    "\n",
+    "# --- Example Usage ---\n",
+    "\n",
+    "# 1. Create a dummy vocab file for demonstration\n",
+    "dummy_vocab_content = \"\"\"sil 39\n",
+    "d 1\n",
+    "ih 2\n",
+    "jh 3\n",
+    "uw 4\n",
+    "iy 5\n",
+    "y 6\n",
+    "eh 7\n",
+    "w 8\n",
+    "dh 9\n",
+    "ey 10\n",
+    "n 11\n",
+    "aw 12\n",
+    "er 13\n",
+    "sh 14\n",
+    "ae 15\n",
+    "dx 16\n",
+    "t 17\n",
+    "ah 18\n",
+    "k 19\n",
+    "m 20\n",
+    "r 21\n",
+    "ay 22\n",
+    "aa 23\n",
+    "l 24\n",
+    "hh 25\n",
+    "f 26\n",
+    "v 27\n",
+    "s 28\n",
+    "ow 29\n",
+    "b 30\n",
+    "z 31\n",
+    "th 32\n",
+    "g 33\n",
+    "ng 34\n",
+    "p 35\n",
+    "ch 36\n",
+    "uh 37\n",
+    "oy 38\n",
+    "<blank> 0\n",
+    "\"\"\"\n",
+    "vocab_file_name = 'phoneme_vocab.txt'\n",
+    "with open(vocab_file_name, 'w', encoding='utf-8') as f:\n",
+    "    f.write(dummy_vocab_content)\n",
+    "\n",
+    "# 2. Load the vocabulary from the file\n",
+    "try:\n",
+    "    my_phoneme_vocab = load_vocab_from_phoneme_file(vocab_file_name)\n",
+    "    print(f\"Vocabulary loaded successfully from {vocab_file_name}.\")\n",
+    "    print(f\"Loaded Vocab size: {len(my_phoneme_vocab)}\")\n",
+    "\n",
+    "    # A simple \"tokenizer\" function for phoneme strings\n",
+    "    def phoneme_string_to_list(text_with_phonemes: str) -> list[str]:\n",
+    "        return text_with_phonemes.strip().split(' ')\n",
+    "\n",
+    "    # Example phoneme sequence for encoding\n",
+    "    input_phonemes = \"d ih jh uw <blank> iy ah\"\n",
+    "    phoneme_tokens = phoneme_string_to_list(input_phonemes)\n",
+    "\n",
+    "    # Encode phoneme tokens to indices\n",
+    "    encoded_indices = my_phoneme_vocab(phoneme_tokens)\n",
+    "    print(f\"\\nOriginal phonemes: {phoneme_tokens}\")\n",
+    "    print(f\"Encoded indices: {encoded_indices}\")\n",
+    "\n",
+    "    # Decode indices back to phonemes\n",
+    "    decoded_phonemes = my_phoneme_vocab.lookup_tokens(encoded_indices)\n",
+    "    print(f\"Decoded phonemes: {decoded_phonemes}\")\n",
+    "\n",
+    "    # Test direct lookup\n",
+    "    print(f\"\\nIndex of 'sil': {my_phoneme_vocab['sil']}\")\n",
+    "    print(f\"Phoneme at index 0: {my_phoneme_vocab.lookup_token(0)}\")\n",
+    "    print(f\"Index of '<blank>': {my_phoneme_vocab['<blank>']}\")\n",
+    "    print(f\"Phoneme at index 39: {my_phoneme_vocab.lookup_token(39)}\")\n",
+    "\n",
+    "    # Demonstrate what happens with an OOV token (raises KeyError as no default is set)\n",
+    "    print(\"\\nAttempting to lookup an out-of-vocabulary phoneme (will cause KeyError):\")\n",
+    "    try:\n",
+    "        my_phoneme_vocab['not_a_phoneme']\n",
+    "    except KeyError as e:\n",
+    "        print(f\"Caught expected KeyError: {e}\")\n",
+    "\n",
+    "finally:\n",
+    "    # Clean up the dummy file\n",
+    "    if os.path.exists(vocab_file_name):\n",
+    "        os.remove(vocab_file_name)"
+   ]
   }
  ],
  "metadata": {
