--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -56,17 +56,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
    "source": [
+    "vocab_file = 'data/label_encoder.txt'\n",
     "train_json = 'data/train.json'\n",
     "test_json = 'data/test.json'\n",
     "valid_json = 'data/dev.json'\n",
     "\n",
+    "def load_phoneme_vocabulary(filepath: str) -> tuple[dict, dict]:\n",
+    "    \"\"\"\n",
+    "    Carga un vocabulario de fonemas desde un archivo de texto.\n",
+    "    El archivo debe tener el formato 'fonema=>indice' por línea.\n",
+    "\n",
+    "    Args:\n",
+    "        filepath (str): La ruta al archivo de vocabulario.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple[dict, dict]: Una tupla que contiene:\n",
+    "            - phoneme_to_idx (dict): Un diccionario que mapea fonema a índice.\n",
+    "            - idx_to_phoneme (dict): Un diccionario que mapea índice a fonema.\n",
+    "    \"\"\"\n",
+    "    phoneme_to_idx = {}\n",
+    "    idx_to_phoneme = {}\n",
+    "\n",
+    "    with open(filepath, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            parts = line.strip().split('=>')\n",
+    "            if len(parts) == 2:\n",
+    "                phoneme = parts[0].strip().strip(\"'\") \n",
+    "                idx_str = parts[1].strip()\n",
+    "                try:\n",
+    "                    index = int(idx_str)\n",
+    "                    phoneme_to_idx[phoneme] = index\n",
+    "                    idx_to_phoneme[index] = phoneme\n",
+    "                except ValueError:\n",
+    "                    raise ValueError(f\"Error: Índice inválido en la línea: '{line.strip()}'\")\n",
+    "            else:\n",
+    "                raise ValueError(f\"Error: Línea mal formada (se esperaba 'fonema=>indice'): '{line.strip()}'\")\n",
+    "    \n",
+    "    return phoneme_to_idx, idx_to_phoneme\n",
+    "\n",
+    "\n",
     "class TimitDataset(Dataset):\n",
-    "    def __init__(self, json_file):\n",
+    "    def __init__(self, json_file, vocab_file):\n",
     "        try:\n",
     "            with open(json_file, 'r') as f:\n",
     "                self.datos_json = json.load(f)\n",
@@ -74,6 +109,8 @@
     "            print(f\"Error: El archivo {json_file} no se encuentra.\")\n",
     "        # Get a list of all sample IDs (keys in the top-level dictionary)\n",
     "        self.datos_ids = list(self.datos_json.keys())\n",
+    "        # Load phoneme vocabulary\n",
+    "        self.str2int, self.int2str = load_phoneme_vocabulary(vocab_file)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.datos_json)\n",
@@ -89,22 +126,25 @@
     "        waveform = waveform.squeeze(0)\n",
     "        # Convert phoneme labels to a tensor\n",
     "        phn_list = phn.strip().split()\n",
+    "        phn_list = [self.str2int[phoneme] for phoneme in phn_list]\n",
     "        \n",
-    "        return waveform, phn_list\n",
+    "        return waveform, torch.tensor(phn_list)\n",
+    "\n",
+    "\n",
     "\n",
     "def collate_fn(batch):\n",
     "    # El batch es una lista de tuplas: [(dato1,label1), (dato2,label2),...]\n",
     "    sequences, labels = zip(*batch) # Esto devuelve: \n",
     "                                    # sequences = (dato1,dato2,...)\n",
     "                                    # labels = (label1,label2,...)\n",
-    "    labels = [torch.tensor([ord(c) for c in label]) for label in labels]\n",
+    "    #labels = [torch.tensor([ord(c) for c in label]) for label in labels]\n",
     "    padded_sequences = pad_sequence(sequences, batch_first=True, padding_value=0)\n",
-    "    padded_labels = pad_sequence(torch.tensor(labels), batch_first=True, padding_value= '\\n')\n",
+    "    padded_labels = pad_sequence(labels, batch_first=True, padding_value= 100)\n",
     "    return padded_sequences, padded_labels # Esta es la salida del dataloader\n",
-    "    return padded_sequences, padded_labels\n",
-    "train_ds = TimitDataset(train_json)\n",
-    "test_ds = TimitDataset(test_json)\n",
-    "valid_ds = TimitDataset(valid_json)\n",
+    "\n",
+    "train_ds = TimitDataset(train_json,vocab_file)\n",
+    "test_ds = TimitDataset(test_json,vocab_file)\n",
+    "valid_ds = TimitDataset(valid_json,vocab_file)\n",
     "\n",
     "train_dl = DataLoader(train_ds, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
     "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
@@ -116,23 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "ord() expected a character, but string of length 3 found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m i\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch \u001b[38;5;129;01min\u001b[39;00m train_dl:\n\u001b[1;32m      3\u001b[0m     sequences, labels \u001b[38;5;241m=\u001b[39m batch\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTamaño del batch:\u001b[39m\u001b[38;5;124m\"\u001b[39m, sequences\u001b[38;5;241m.\u001b[39msize())\n",
-      "File \u001b[0;32m/anaconda3/lib/python3.12/site-packages/torch/utils/data/dataloader.py:733\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    730\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    731\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    732\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 733\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_data()\n\u001b[1;32m    734\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    735\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m    736\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable\n\u001b[1;32m    737\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    738\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called\n\u001b[1;32m    739\u001b[0m ):\n",
-      "File \u001b[0;32m/anaconda3/lib/python3.12/site-packages/torch/utils/data/dataloader.py:789\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    787\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    788\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 789\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_fetcher\u001b[38;5;241m.\u001b[39mfetch(index)  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    790\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    791\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m/anaconda3/lib/python3.12/site-packages/torch/utils/data/_utils/fetch.py:55\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     54\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n\u001b[0;32m---> 55\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcollate_fn(data)\n",
-      "Cell \u001b[0;32mIn[35], line 37\u001b[0m, in \u001b[0;36mcollate_fn\u001b[0;34m(batch)\u001b[0m\n\u001b[1;32m     34\u001b[0m sequences, labels \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mbatch) \u001b[38;5;66;03m# Esto devuelve: \u001b[39;00m\n\u001b[1;32m     35\u001b[0m                                 \u001b[38;5;66;03m# sequences = (dato1,dato2,...)\u001b[39;00m\n\u001b[1;32m     36\u001b[0m                                 \u001b[38;5;66;03m# labels = (label1,label2,...)\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m labels \u001b[38;5;241m=\u001b[39m [torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;28mord\u001b[39m(c) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m label]) \u001b[38;5;28;01mfor\u001b[39;00m label \u001b[38;5;129;01min\u001b[39;00m labels]\n\u001b[1;32m     38\u001b[0m padded_sequences \u001b[38;5;241m=\u001b[39m pad_sequence(sequences, batch_first\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, padding_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     39\u001b[0m padded_labels \u001b[38;5;241m=\u001b[39m pad_sequence(torch\u001b[38;5;241m.\u001b[39mtensor(labels), batch_first\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, padding_value\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: ord() expected a character, but string of length 3 found"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño del batch: torch.Size([8, 54682])\n",
+      "Tamaño de las etiquetas: 8\n",
+      "Tamaño del batch: torch.Size([8, 81408])\n",
+      "Tamaño de las etiquetas: 8\n",
+      "Tamaño del batch: torch.Size([8, 88576])\n",
+      "Tamaño de las etiquetas: 8\n",
+      "Tamaño del batch: torch.Size([8, 59904])\n",
+      "Tamaño de las etiquetas: 8\n",
+      "Tamaño del batch: torch.Size([8, 73216])\n",
+      "Tamaño de las etiquetas: 8\n"
      ]
     }
    ],
@@ -149,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2ecf7ba1",
    "metadata": {},
    "outputs": [
