--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [
@@ -164,17 +164,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamaño del batch: torch.Size([8, 54682])\n",
+      "Tamaño del batch: torch.Size([8, 73524])\n",
       "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 81408])\n",
+      "Tamaño del batch: torch.Size([8, 64512])\n",
       "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 88576])\n",
+      "Tamaño del batch: torch.Size([8, 59188])\n",
       "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 59904])\n",
+      "Tamaño del batch: torch.Size([8, 58471])\n",
       "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 73216])\n",
+      "Tamaño del batch: torch.Size([8, 74343])\n",
       "Tamaño de las etiquetas: 8\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 39,  18,  39,  33,  37,  16,  15,  16,   2,  39,  17,   4,  16,   2,\n",
+       "         31,  23,  11,  39,  30,   5,  16,   2,  39,  30,  24,  39, 100, 100,\n",
+       "        100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100,\n",
+       "        100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -185,7 +198,9 @@
     "    print(\"Tamaño de las etiquetas:\", len(labels))\n",
     "    i += 1\n",
     "    if i >= 5:  # Limitar a un solo batch para evitar imprimir demasiado\n",
-    "        break  # Solo para mostrar el primer batch y evitar imprimir demasiado"
+    "        break  # Solo para mostrar el primer batch y evitar imprimir demasiado\n",
+    "\n",
+    "labels[0]"
    ]
   },
   {
