--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -793,6 +793,80 @@
     "    print(\"p.json already exists. Skipping dummy file creation.\")\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a99be6b",
+   "metadata": {},
+   "source": [
+    "## Creación de un greedy ctc decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7829647f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "def greedy_ctc_decode(emissions: torch.Tensor, blank_idx: int) -> list[str]:\n",
+    "    \"\"\"\n",
+    "    Performs greedy CTC decoding on a batch of log-probabilities.\n",
+    "\n",
+    "    Args:\n",
+    "        emissions: Tensor of shape (seq_len, batch_size, num_classes)\n",
+    "                   containing log-probabilities.\n",
+    "        blank_idx: Index of the blank token.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of decoded strings, one for each sequence in the batch.\n",
+    "    \"\"\"\n",
+    "    decoded_sequences = []\n",
+    "    # Permute to (batch_size, seq_len, num_classes) for easier argmax\n",
+    "    emissions = emissions.permute(1, 0, 2)\n",
+    "\n",
+    "    for i in range(emissions.shape[0]): # Iterate over batch\n",
+    "        # Get the index of the max probability at each timestep\n",
+    "        argmax_preds = emissions[i].argmax(dim=-1)\n",
+    "\n",
+    "        decoded_seq = []\n",
+    "        last_char_idx = -1\n",
+    "        for char_idx in argmax_preds:\n",
+    "            if char_idx != blank_idx and (char_idx != last_char_idx or last_char_idx == blank_idx):\n",
+    "                # Add if not blank and not a repeated character (unless the last was blank)\n",
+    "                decoded_seq.append(char_idx.item())\n",
+    "            last_char_idx = char_idx\n",
+    "\n",
+    "        # Convert indices to actual characters (you'll need your vocab mapping)\n",
+    "        # For this example, let's assume `tokens` list is available\n",
+    "        decoded_strings = [tokens[idx] for idx in decoded_seq]\n",
+    "        decoded_sequences.append(\"\".join(decoded_strings))\n",
+    "    return decoded_sequences\n",
+    "\n",
+    "# Example usage\n",
+    "tokens = [\"<blank>\", \"a\", \"b\", \"c\", \" \"] # Your actual vocabulary\n",
+    "blank_idx = tokens.index(\"<blank>\")\n",
+    "\n",
+    "# Example emissions (seq_len, batch_size, num_classes)\n",
+    "# Let's say the model outputs: \"a-a-b-blank-b-c\" (where '-' is blank)\n",
+    "# This should decode to \"abc\"\n",
+    "emissions_example = torch.zeros(7, 1, len(tokens))\n",
+    "emissions_example[0, 0, tokens.index(\"a\")] = 10\n",
+    "emissions_example[1, 0, blank_idx] = 10\n",
+    "emissions_example[2, 0, tokens.index(\"a\")] = 10\n",
+    "emissions_example[3, 0, blank_idx] = 10\n",
+    "emissions_example[4, 0, tokens.index(\"b\")] = 10\n",
+    "emissions_example[5, 0, blank_idx] = 10\n",
+    "emissions_example[6, 0, tokens.index(\"c\")] = 10\n",
+    "\n",
+    "# Add a small amount of noise to other classes to avoid all zeros in softmax\n",
+    "emissions_example += torch.randn_like(emissions_example) * 0.1\n",
+    "\n",
+    "decoded_greedy = greedy_ctc_decode(emissions_example, blank_idx)\n",
+    "print(f\"Greedy decoded: {decoded_greedy}\")"
+   ]
   }
  ],
  "metadata": {
