--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -27,6 +27,7 @@
     "import torch\n",
     "import torch.utils.data as data\n",
     "import torchaudio\n",
+    "from torchaudio.transforms import MelSpectrogram\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "from torch.utils.data import  Dataset, DataLoader\n",
     "from torchaudio.models.decoder import ctc_decoder # vamos a hacer un decoder greedy, por razones \n",
@@ -155,76 +156,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3e07da27",
+   "cell_type": "markdown",
+   "id": "af0bc720",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tamaño del batch: torch.Size([8, 73524])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 64512])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 59188])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 58471])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 74343])\n",
-      "Tamaño de las etiquetas: 8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 39,  18,  39,  33,  37,  16,  15,  16,   2,  39,  17,   4,  16,   2,\n",
-       "         31,  23,  11,  39,  30,   5,  16,   2,  39,  30,  24,  39, 100, 100,\n",
-       "        100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100,\n",
-       "        100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "i=0\n",
-    "for batch in train_dl:\n",
-    "    sequences, labels = batch\n",
-    "    print(\"Tamaño del batch:\", sequences.size())\n",
-    "    print(\"Tamaño de las etiquetas:\", len(labels))\n",
-    "    i += 1\n",
-    "    if i >= 5:  # Limitar a un solo batch para evitar imprimir demasiado\n",
-    "        break  # Solo para mostrar el primer batch y evitar imprimir demasiado\n",
-    "\n",
-    "labels[0]"
+    "## Implementación de la clase ASR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ecf7ba1",
+   "id": "32624f4c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mm\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mint\u001b[39m(a)\n",
-      "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "a = ['s','r','m']\n",
-    "int(a)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
