--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,10 @@
     }
    ],
    "source": [
-    "## Implementación de la clase ASR"
+    "## Implementación de la clase ASR\n",
+    "class ASR:\n",
+    "    def __init__(self):\n",
+    "        "
    ]
   },
   {
@@ -207,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
