--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     "import torch\n",
     "import torch.utils.data as data\n",
     "import torchaudio\n",
-    "from torchaudio.transforms import MelSpectrogram\n",
+    "import torchaudio.transforms as F\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "from torch.utils.data import  Dataset, DataLoader\n",
     "from torchaudio.models.decoder import ctc_decoder # vamos a hacer un decoder greedy, por razones \n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -151,8 +151,15 @@
     "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
     "valid_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
     "\n",
-    "  \n",
-    "        "
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04b7d974",
+   "metadata": {},
+   "source": [
+    "## Implementación del modelo"
    ]
   },
   {
@@ -160,38 +167,34 @@
    "execution_count": null,
    "id": "3e07da27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tamaño del batch: torch.Size([8, 54682])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 81408])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 88576])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 59904])\n",
-      "Tamaño de las etiquetas: 8\n",
-      "Tamaño del batch: torch.Size([8, 73216])\n",
-      "Tamaño de las etiquetas: 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Implementación de la clase ASR\n",
-    "class ASR:\n",
-    "    def __init__(self):\n",
+    "# Parámetros\n",
+    "par = {'sample_rate': 16000, 'n_fft': 400, 'n_mels': 40, 'lr': 0.1, 'dropout': 0.15, 'cnn_channels': (128,256),\n",
+    "        'cnn_kernelsize': (3,3), 'rnn_layers': 4, 'rnn_neurons': 512, 'dnn_blocks':2, 'dnn_neurons':512}\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "32624f4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "512"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par['rnn_neurons']"
+   ]
   }
  ],
  "metadata": {
@@ -210,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
