--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -878,10 +878,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89ba2f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input MelSpectrogram tensor shape: torch.Size([4, 80, 120])\n",
+      "Original sequence lengths (frames): tensor([100,  75, 120,  50])\n",
+      "\n",
+      "--- Example 1: Basic Mel CNN_Block (length-preserving, replicate padding) ---\n",
+      "Output 1 shape: torch.Size([4, 64, 120])\n",
+      "New lengths 1: tensor([100,  75, 120,  50])\n",
+      "Are padded regions zero for sample 0 (output_1): True\n",
+      "Are padded regions zero for sample 1 (output_1): True\n",
+      "\n",
+      "--- Example 2: Mel CNN_Block with Pooling and Dropout (length reduction, circular padding) ---\n",
+      "Output 2 shape: torch.Size([4, 128, 60])\n",
+      "New lengths 2: tensor([50, 37, 60, 25])\n",
+      "Expected new lengths 2: tensor([50, 37, 60, 25])\n",
+      "Are padded regions zero for sample 0 (output_2): True\n",
+      "Are padded regions zero for sample 1 (output_2): True\n",
+      "\n",
+      "--- Example 3: Mel CNN_Block with stride > 1 (explicit padding, zeros padding_mode) ---\n",
+      "Caught expected error: Padding 'same' only supported for stride=1 when aiming to preserve length. For stride > 1, specify an integer padding or handle output length manually.\n",
+      "\n",
+      "--- Example 4: CNN_Block with stride > 1 (explicit padding as int) ---\n",
+      "Output 4 shape: torch.Size([4, 32, 60])\n",
+      "New lengths 4: tensor([50, 38, 60, 25])\n",
+      "Expected new lengths 4: tensor([50, 38, 60, 25])\n",
+      "Are padded regions zero for sample 0 (output_4): True\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -1228,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
